# bookstore

./: .gitignore  README.md  conftest.py  docker-compose.yml  dockerfile  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  tests.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: factories.py  tests.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
